--- a/client/package.json
+++ b/client/package.json
@@ -103,7 +103,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://journalsu-api.herokuapp.com/",
+  "proxy": "https://journal-su.herokuapp.com/",
   "devDependencies": {
     "prop-types": "^15.7.2"
   },
